@@ -435,9 +435,9 @@ namespace WoopsiUI {
 		 * function).
 		 * @param y The y co-ordinate of the pixel from the stack (output by the
 		 * function).
-		 * @param stack Pointer to the stack to pop from.
+		 * @param stack The stack to pop from.
 		 */
-		bool popStack(s16* x, s16* y, WoopsiArray<s32>* stack);
+		bool popStack(s16* x, s16* y, WoopsiArray<s32>& stack);
 		
 		/**
 		 * Push new co-ordinates onto the stack.
@@ -445,7 +445,7 @@ namespace WoopsiUI {
 		 * @param y The y co-ordinate of the pixel to add to the stack.
 		 * @param stack The stack to add a new value to.
 		 */
-		void pushStack(s16 x, s16 y, WoopsiArray<s32>* stack);
+		void pushStack(s16 x, s16 y, WoopsiArray<s32>& stack);
 
 		/**
 		 * Get the clipping code for the given co-ordinates based on the
